# docs/swagger.json
@@ -693,8 +693,11 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "No Content"
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.DeleteDrinkLogResponse"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
@@ -956,6 +959,89 @@
                     }
                 }
             }
+        },
+        "/users/profile": {
+            "get": {
+                "description": "Get the current user's profile information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get user profile",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.UserProfileResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update the current user's profile information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Update user profile",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "User profile",
+                        "name": "profile",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.UpdateUserProfileRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.UserProfileResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -1097,6 +1183,14 @@
                 },
                 "last_calculated": {
                     "type": "string"
+                }
+            }
+        },
+        "dtos.DeleteDrinkLogResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
                 }
             }
         },
@@ -1275,6 +1369,30 @@
                 }
             }
         },
+        "dtos.UpdateUserProfileRequest": {
+            "type": "object",
+            "required": [
+                "gender",
+                "weight_kg"
+            ],
+            "properties": {
+                "gender": {
+                    "enum": [
+                        "male",
+                        "female",
+                        "unknown"
+                    ],
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.Gender"
+                        }
+                    ]
+                },
+                "weight_kg": {
+                    "type": "number"
+                }
+            }
+        },
         "dtos.UserLoginRequest": {
             "type": "object",
             "properties": {
@@ -1305,6 +1423,23 @@
                 },
                 "user_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "dtos.UserProfileResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "gender": {
+                    "$ref": "#/definitions/models.Gender"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "weight_kg": {
+                    "type": "number"
                 }
             }
         },
@@ -1483,6 +1618,19 @@
                     "type": "string"
                 }
             }
+        },
+        "models.Gender": {
+            "type": "string",
+            "enum": [
+                "male",
+                "female",
+                "unknown"
+            ],
+            "x-enum-varnames": [
+                "Male",
+                "Female",
+                "Unknown"
+            ]
         },
         "models.Health": {
             "type": "object",
